# PopStar

./: CMakeLists.txt  LICENSE  PopStar.pro  README.md  game_over.cpp  game_over.h  game_over.ui  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  popstar.cpp  popstar.h  popstar.ui
resources/: image.qrc
src/: game_over.cpp  game_over.h  main.cpp  mainwindow.cpp  mainwindow.h  popstar.cpp  popstar.h
ui/: game_over.ui  mainwindow.ui  popstar.ui
